--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -131,3 +131,7 @@ td.sidebar {
   border: 1px solid #999;
   margin-bottom: -15px;
 }
+/* signup form */
+div.field, div.actions {
+  margin-bottom: 10px;
+}
