added javascript counter and tests for sidebar micropost count

--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -1,3 +1,25 @@
+<script type="text/javascript">
+$(function() {
+  $('#micropost_content').keyup(function() {
+    var content_length = $(this).val().length;
+    var remaining = 140 - content_length
+    $('#char_count').html(remaining);
+    if (remaining < 21 && remaining > 9) {
+      $('#char_count').removeClass('red');
+      $('#char_count').addClass('dark_red');
+    } else if (remaining <= 9) {
+      $('#char_count').removeClass('dark_red');
+      $('#char_count').addClass('red');
+    } else {
+      $('#char_count').removeClass('dark_red').removeClass('red');
+    }
+  })
+})
+</script>
+
+<h1 class="micropost" style="float: left;">What's up?</h1>
+<h1 id="char_count" style="float: right;">140</h1>
+<div class="clear"></div>
 <%= form_for @micropost do |f| %>
   <%= render 'shared/error_messages', :object => f.object %>
   <div class="field">
